// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MRadioGroup should render correctly 1`] = `
<div class="m-radio-group">
  <div class="m-validation-message m-radio-group__message"> </div>
  <ul role="radiogroup" class="m-radio-group__body">
    <li class="m-radio"><input id="uuid" name="uuid" type="radio" value="rdo1" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
    <li class="m-radio"><input id="uuid" name="uuid" type="radio" value="rdo2" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
  </ul>
</div>
`;

exports[`MRadioGroup should render correctly when disabled 1`] = `
<div class="m-radio-group m--is-disabled">
  <div class="m-validation-message m-radio-group__message"> </div>
  <ul role="radiogroup" class="m-radio-group__body">
    <li class="m-radio m--is-disabled"><input aria-hidden="true" disabled="disabled" id="uuid" name="uuid" type="radio" value="rdo1" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
    <li class="m-radio m--is-disabled"><input aria-hidden="true" disabled="disabled" id="uuid" name="uuid" type="radio" value="rdo2" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
  </ul>
</div>
`;

exports[`MRadioGroup should render correctly when inline 1`] = `
<div class="m-radio-group m--is-inline">
  <div class="m-validation-message m-radio-group__message"> </div>
  <ul role="radiogroup" class="m-radio-group__body">
    <li class="m-radio m--is-inline"><input id="uuid" name="uuid" type="radio" value="rdo1" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
    <li class="m-radio m--is-inline"><input id="uuid" name="uuid" type="radio" value="rdo2" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
  </ul>
</div>
`;

exports[`MRadioGroup should render correctly when radiosMarginTop is  10px 1`] = `
<div class="m-radio-group">
  <div class="m-validation-message m-radio-group__message"> </div>
  <ul role="radiogroup" class="m-radio-group__body">
    <li class="m-radio"><input id="uuid" name="uuid" type="radio" value="rdo1" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:10px;"></span> <span class="m-radio__label"></span></label></li>
    <li class="m-radio"><input id="uuid" name="uuid" type="radio" value="rdo2" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:10px;"></span> <span class="m-radio__label"></span></label></li>
  </ul>
</div>
`;

exports[`MRadioGroup should render correctly when radiosPosition is right 1`] = `
<div class="m-radio-group">
  <div class="m-validation-message m-radio-group__message"> </div>
  <ul role="radiogroup" class="m-radio-group__body">
    <li class="m-radio m--is-input-right"><input id="uuid" name="uuid" type="radio" value="rdo1" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
    <li class="m-radio m--is-input-right"><input id="uuid" name="uuid" type="radio" value="rdo2" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
  </ul>
</div>
`;

exports[`MRadioGroup should render correctly when radiosVerticalAlign is center 1`] = `
<div class="m-radio-group">
  <div class="m-validation-message m-radio-group__message"> </div>
  <ul role="radiogroup" class="m-radio-group__body">
    <li class="m-radio m--is-align-center"><input id="uuid" name="uuid" type="radio" value="rdo1" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
    <li class="m-radio m--is-align-center"><input id="uuid" name="uuid" type="radio" value="rdo2" class="m-radio__hidden"> <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input" style="margin-top:undefined;"></span> <span class="m-radio__label"></span></label></li>
  </ul>
</div>
`;
